testing for mobile browsing, removed animations on mobile, and fixed buttons on mobile

--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -1,85 +1,127 @@
 /* Call to Action Button */
 .cta-btn {
-  display: inline-block;
-  position: relative;
-  padding: 0.8rem $default-font-size;
-  font-weight: bold;
-  line-height: 1;
-  z-index: 1;
-  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
+	display: inline-block;
+	position: relative;
+	height: 3.6rem;
+	padding: 0.8rem $default-font-size;
+	font-weight: bold;
+	line-height: 1;
+	z-index: 1;
+	transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
 
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 0px;
-    height: 100%;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.3s;
-  }
-}
+	&::after {
+		content: '';
+		display: block;
+		position: absolute;
+		width: 0px;
+		height: 100%;
+		left: 0;
+		bottom: 0;
+		z-index: -1;
+		transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.3s;
+	}
 
-/* Hero Style */
-.cta-btn--hero {
-  background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  border-width: 2px;
-  border-style: solid;
-  border-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
-  border-image-slice: 1;
-  cursor: pointer;
-  // Responsive Button hero style
-  @include respond(phone) {
-    background-image: none;
-    border: 2px solid $secondary-color;
-    -webkit-text-fill-color: $secondary-color;
-  }
+	/* Hero Style */
+	&--hero {
+		background-image: linear-gradient(
+			135deg,
+			$primary-color 0%,
+			$secondary-color 100%
+		);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		border-width: 2px;
+		border-style: solid;
+		border-image: linear-gradient(
+			135deg,
+			$primary-color 0%,
+			$secondary-color 100%
+		);
+		border-image-slice: 1;
+		cursor: pointer;
+		// Responsive Button hero style
+		@include respond(phone) {
+			background-image: none;
+			border: 2px solid $secondary-color;
+			-webkit-text-fill-color: $secondary-color;
+		}
 
-  &::after {
-    background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
-    // Responsive Button hero style
-    @include respond(phone) {
-      background-image: none;
-    }
-  }
+		&::after {
+			background-image: linear-gradient(
+				135deg,
+				$primary-color 0%,
+				$secondary-color 100%
+			);
+			// Responsive Button hero style
+			@include respond(phone) {
+				background-image: none;
+			}
+		}
 
-  &:hover {
-    -webkit-text-fill-color: $white-color;
-    text-decoration: none;
-    // Responsive Button hover hero style
-    @include respond(phone) {
-      -webkit-text-fill-color: $secondary-color;
-    }
+		&:hover {
+			-webkit-text-fill-color: $white-color;
+			text-decoration: none;
+			// Responsive Button hover hero style
+			@include respond(phone) {
+				-webkit-text-fill-color: $secondary-color;
+			}
 
-    &::after {
-      width: 100%;
-    }
-  }
-}
+			&::after {
+				width: 100%;
+			}
+		}
+	}
 
-/* Resume Style */
-.cta-btn--resume {
-  color: $white-color;
-  border: 2px solid $white-color;
+	/* Hero Style for mobile */
+	&--hero-mobile {
+		background-image: none;
+		border: 2px solid $secondary-color;
+		-webkit-text-fill-color: $secondary-color;
 
-  &::after {
-    background: $white-color;
-  }
+		&::after {
+			@include respond(phone) {
+				background-image: none;
+			}
+		}
 
-  &:hover {
-    color: $secondary-color;
-    text-decoration: none;
+		&::after {
+			@include respond(phone) {
+				background-image: none;
+			}
+		}
+	}
 
-    &::after {
-      width: 100%;
-    }
-  }
+	/* Resume Style */
+	&--resume {
+		color: $white-color;
+		border: 2px solid $white-color;
+
+		&::after {
+			background: $white-color;
+		}
+
+		&:hover {
+			color: $secondary-color;
+			text-decoration: none;
+
+			&::after {
+				width: 100%;
+			}
+		}
+	}
+
+	/* Resume Style for mobile */
+	&--resume-mobile {
+		color: $white-color;
+		border: 2px solid $white-color;
+
+		&:hover {
+			color: $white-color;
+		}
+	}
 }
 
 /* Arrow Button */
 .up i {
-  color: #272727;
+	color: #272727;
 }
